--- a/template.html
+++ b/template.html
@@ -21,9 +21,9 @@
 </head>
 <body class=" flex_column works_on_smartphone">
     
-    <div class="title border_shadow">
+    <!-- <div class="title border_shadow">
         <h1 class="title">Mi huerta</h1>
-    </div>
+    </div> -->
     
     <header class="menu border_shadow gradient_menu">
         <div class="right">
@@ -59,6 +59,10 @@
 
         <article>
             <div id="article">
+                <!-- <div style="text-align: center;">
+                    <h1 class="title">Mi Huerta</h1>
+                    <p style="font-size: small;">Apuntes para empezar un huerto urbano en Cali, Colombia.</p>
+                </div> -->
                 <!-- <div style="text-align: center;">
                     <h2 style="font-family: 'Josefin Sans', serif; font-weight: 700; margin:5px">Mi Huerta</h2>
                     <p style="font-size: small;">Apuntes para empezar un huerto urbano en Cali, Colombia.</p>
