Index and structure
Index finished
subpage creation
content height function fixed

--- a/creditos.html
+++ b/creditos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Título de la página</title>
+    <title>Créditos</title>
 
     <!-- Hojas de estilo -->
     <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
