--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             <div id="article">
                 <div class="container_title">
                     <h1 class="title">Mi Huerta</h1>
-                    <p class="notes">Apuntes para empezar un huerto urbano en Cali, Colombia.</p>
+                    <p class="notes">¡Animate y empeiza a planear la tuya! ٩(◕‿◕)۶</p>
+                </div>
+
+                <div class="subtitle">
+                    <h2>Recursos:</h2>
                 </div>
                 
                 <div class="container_tabs">
