--- a/espacios.html
+++ b/espacios.html
@@ -44,7 +44,7 @@
                 <!-- End dropdwon -->
 
                 <li class="large_screen active_page"><a href="espacios.html">Espacios</a></li>
-                <li class="large_screen"><a href="estructuras.html">Tipos</a></li>
+                <li class="large_screen"><a href="estructuras.html">Estructuras</a></li>
                 <li class="large_screen"><a href="fichas.html">Fichas</a></li>
                 <li class="large_screen"><a href="creditos.html">Créditos</a></li>
             </ul>
