--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- End dropdwon -->
 
                 <li class="large_screen"><a href="espacios.html">Espacios</a></li>
-                <li class="large_screen"><a href="estructuras.html">Tipos</a></li>
+                <li class="large_screen"><a href="estructuras.html">Estructuras</a></li>
                 <li class="large_screen"><a href="fichas.html">Fichas</a></li>
                 <li class="large_screen"><a href="creditos.html">Créditos</a></li>
             </ul>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="paragraph">
                             <p>
-                                Hay varios estructuras para orginazar las huertas, las cuales se pueden
+                                Hay varias estructuras para orginazar las huertas, las cuales se pueden
                                 dividir entre estructuras horizontales y estructuras verticales. La
                                 estructura a utilizar... 
                             </p>
