--- a/estructuras.html
+++ b/estructuras.html
@@ -29,14 +29,14 @@
 
         <nav class="navigator">
             <ul>
-                <li id="home_button" class="active_page logo"><a href="index.html">&#11302;<p class="large_screen">Home</p></a></li>
+                <li id="home_button" class="logo"><a href="index.html">&#11302;<p class="large_screen">Home</p></a></li>
                 <li class="current_page"><a href="tweets.html">Redes</a></li>
                 
                 <!-- Dropdwon -->
                 <li id="more_button"><a href="#">&#9776;</a>
                     <ul class="border_shadow gradient_menu">
                         <li><a href="espacios.html">Espacios</a></li>
-                        <li><a href="estructuras.html">Estructuras</a></li>
+                        <li class="active_page"><a href="estructuras.html">Estructuras</a></li>
                         <li><a href="fichas.html">Fichas</a></li>
                         <li><a href="creditos.html">Créditos</a></li>
                     </ul>
@@ -44,7 +44,7 @@
                 <!-- End dropdwon -->
 
                 <li class="large_screen"><a href="espacios.html">Espacios</a></li>
-                <li class="large_screen"><a href="estructuras.html">Estructuras</a></li>
+                <li class="active_page large_screen"><a href="estructuras.html">Estructuras</a></li>
                 <li class="large_screen"><a href="fichas.html">Fichas</a></li>
                 <li class="large_screen"><a href="creditos.html">Créditos</a></li>
             </ul>
