--- a/fichas.html
+++ b/fichas.html
@@ -29,7 +29,7 @@
 
         <nav class="navigator">
             <ul>
-                <li id="home_button" class="active_page logo"><a href="index.html">&#11302;<p class="large_screen">Home</p></a></li>
+                <li id="home_button" class="logo"><a href="index.html">&#11302;<p class="large_screen">Home</p></a></li>
                 <li class="current_page"><a href="tweets.html">Redes</a></li>
                 
                 <!-- Dropdwon -->
@@ -37,7 +37,7 @@
                     <ul class="border_shadow gradient_menu">
                         <li><a href="espacios.html">Espacios</a></li>
                         <li><a href="estructuras.html">Estructuras</a></li>
-                        <li><a href="fichas.html">Fichas</a></li>
+                        <li class="active_page"><a href="fichas.html">Fichas</a></li>
                         <li><a href="creditos.html">Créditos</a></li>
                     </ul>
                 </li>
@@ -45,7 +45,7 @@
 
                 <li class="large_screen"><a href="espacios.html">Espacios</a></li>
                 <li class="large_screen"><a href="estructuras.html">Estructuras</a></li>
-                <li class="large_screen"><a href="fichas.html">Fichas</a></li>
+                <li class="large_screen active_page"><a href="fichas.html">Fichas</a></li>
                 <li class="large_screen"><a href="creditos.html">Créditos</a></li>
             </ul>
         </nav>
@@ -57,7 +57,7 @@
             <div id="article">
                 <div class="container_title">
                     <h1 class="title">Fichas de cultivo</h1>
-                    <p class="notes">Antes de empezar debemos leer el manual ¡¡¡( •̀ ᴗ •́ )و!!!</p>
+                    <p class="notes">Antes de empezar debemos leer el manual (╭ರ_•́)</p>
                 </div>
                 <div class="text">
                     <p>Antes empezar a sembrar debes consultar la ficha de cultivo de la
