--- a/fichas.html
+++ b/fichas.html
@@ -112,6 +112,8 @@
                                     <img src="https://image.freepik.com/foto-gratis/vista-arriba-plantulas-caja-herramientas-maceta-planta-madera_23-2148165183.jpg" alt="Semillero">
                                     <img src="https://cdn.pixabay.com/photo/2016/10/11/19/42/celery-1732569_960_720.jpg" alt="Esqueje apio">
                                     <img src="https://image.freepik.com/foto-gratis/primer-plano-manos-jardinero-plantando-plantas-olla_23-2148165170.jpg" alt="Transplante">
+                                    <img src="https://image.freepik.com/foto-gratis/mujer-jardineria-lanzador-jardin_23-2148269674.jpg" alt="Semillero 2">
+                                    <img src="https://images.unsplash.com/photo-1523348837708-15d4a09cfac2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Plantulas">
                                 </div>
                             </div>
                         </li>
