--- a/tweets.html
+++ b/tweets.html
@@ -116,48 +116,18 @@
                     </ul>
                 </div>
             </div>
-            
-            <!-- <div id="credits">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
         </article>
 
         <aside>
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis repellat tempora aliquam accusantium possimus earum nihil quia dolor cum alias vero, autem atque omnis. Eos culpa in deserunt sequi?</p> -->
-            <!--placeholder to add comment thread later.-->
             <div id="disqus_thread"></div>
                 <script>
-
-                /**
-                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-                /*
-                var disqus_config = function () {
-                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                };
-                */
-                (function() { // DON'T EDIT BELOW THIS LINE
-                var d = document, s = d.createElement('script');
-                s.src = '//holbertonl2.disqus.com/embed.js';
-                s.setAttribute('data-timestamp', +new Date());
-                (d.head || d.body).appendChild(s);
-                })();
+                    // Comments block
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = '//holbertonl2.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </aside>
