--- a/espacios.html
+++ b/espacios.html
@@ -57,22 +57,16 @@
             <div id="article">
                 <div class="container_title">
                     <h1 class="title">Espacios</h1>
-                    <p class="notes">La clave de escoger un buen lugar es la luz.</p>
+                    <p class="notes">La clave de escoger un buen lugar es la luz (⌐■_■)</p>
                 </div>
 
                 <div class="text">
                     <p>
-                        No hay que tener un terreno ni un patio enorme para tener una huerta, 
-                        es más si tienes una ventana o un balcón ya tienes tu espacio ideal, 
-                        lo importante es escoger un lugar que le de la luz (solar) la mayor 
-                        parte día.
+                        No hay que tener un terreno ni un patio enorme para tener una huerta, es más si tienes una ventana o un balcón ya tienes tu espacio ideal, lo importante es escoger un lugar que le dé la luz (solar) la mayor parte día.
                     </p>
 
                     <p>
-                        Si no tienes lugares muy iluminados no te debes desanimar, hay varios
-                        tipos de aromaticas que pueden crecer muy bien con luz parcial en sombra.
-                        Literalmente puedes tener y cosechar hortazlizas en un sotano 
-                        si usas luz ultravioleta. (⌐■_■)
+                        Si no tienes lugares muy iluminados no te debes desanimar, hay varios tipos de aromáticas que pueden crecer muy bien con luz parcial en sombra. Literalmente puedes tener y cosechar hortalizas en un sótano si usas luz ultravioleta.
                     </p>
 
                     <div class="text_image">
@@ -81,15 +75,10 @@
                     </div>
 
                     <p>
-                        El tamaño tampoco debe ser motivo de preocupación, naturalmente no se
-                        puede pretender diez naranjos en trescientos metros cuadrados, pero es 
-                        totalmente factible tener manzanilla y romero colgadas a lo largo del 
-                        metro y medio de la ventana.
+                        El tamaño tampoco debe ser motivo de preocupación, naturalmente no se puede pretender diez naranjos en trescientos metros cuadrados, pero es totalmente factible tener manzanilla y romero colgadas a lo largo del metro y medio de la ventana.
                     </p>
                     <p>
-                        Por ahora solo preocupate por encontrar un lugar con buena luz. En el 
-                        post de <a href="estructuras.html" title="Ir a estructuras">estructuras</a> te mostraré como aprovechar el espacio que 
-                        tienes.
+                        Por ahora solo preocúpate por encontrar un lugar con buena luz. En el post de <a href="estructuras.html" title="Ir a estructuras">estructuras</a> te mostraré como aprovechar el espacio que tienes.
                     </p>
 
                 </div>
