--- a/estructuras.html
+++ b/estructuras.html
@@ -63,7 +63,7 @@
     
                     <div class="text">
                         <p>
-                            Hay varias estructuras para orginazar las huertas, las cuales se pueden
+                            Hay varias estructuras para organizar las huertas, las cuales se pueden
                             dividir entre estructuras horizontales y estructuras verticales. La
                             estructura a utilizar depende del espacio que seleccionaste previamente.
                         </p>
