--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
 
-    <!-- Animations -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-
     <!-- Script -->
     <script src="behavior.js"></script>
     
@@ -60,7 +57,7 @@
             <div id="article">
                 <div class="container_title">
                     <h1 class="title">Mi Huerta</h1>
-                    <p class="notes">¡Animate y empeiza a planear la tuya! ٩(◕‿◕)۶</p>
+                    <p class="notes">¡Anímate y empieza a planear la tuya! ٩(◕‿◕)۶</p>
                 </div>
 
                 <div class="subtitle">
@@ -90,9 +87,7 @@
                         </div>
                         <div class="paragraph">
                             <p>
-                                Hay varias estructuras para orginazar las huertas, las cuales se pueden
-                                dividir entre estructuras horizontales y estructuras verticales. La
-                                estructura a utilizar... 
+                                Hay varias estructuras para organizar las huertas, las cuales se pueden dividir entre estructuras horizontales y estructuras verticales. La estructura a utilizar...
                             </p>
                             <a href="estructuras.html" alt="mas" title="Ir a Estructuras">&#10148;</a>
                         </div>
@@ -105,8 +100,7 @@
                         </div>
                         <div class="paragraph">
                             <p>
-                                Antes empezar a sembrar debes consultar la ficha de cultivo de la 
-                                hortliza que deseas sembrar, de esta manera te asegurarás que puedes ...
+                                Antes empezar a sembrar debes consultar la ficha de cultivo de la hortaliza que deseas sembrar, de esta manera te asegurarás que puedes ...
                             </p>
                             <a href="fichas.html" alt="mas" title="Ir a Fichas de cultivo">&#10148;</a>
                         </div>
@@ -119,9 +113,7 @@
                         </div>
                         <div class="paragraph">
                             <p>
-                                En youtube existen muchos canales especializados en huertos urbanos,
-                                en podras encontrar tutoriales y tips para empezar y mantener tu huerto,
-                                además ...
+                                En YouTube existen muchos canales especializados en huertos urbanos, en podrás encontrar tutoriales y tips para empezar y mantener tu huerto, además ...
                             </p>
                             <a href="tweets.html" alt="mas" title="Ir a Redes">&#10148;</a>
                         </div>
