--- a/tweets.html
+++ b/tweets.html
@@ -60,11 +60,8 @@
                     <p class="notes">Aprende de los mejores ¡¡¡( •̀ ᴗ •́ )و!!!</p>
                 </div>
                 <div class="text">
-                    <p>Los siguientes canales en mi opinion son los mejores para aprender 
-                        como hacer y mantener una huerta urbana. Algunos son de países que 
-                        del emisferio norte como España y del emisferio sur como Argentina, 
-                        así que tienen estaciones y algunas son diferentes, pero nada del 
-                        otro mundo, creo que con un poco de sentido común todo se endiende.
+                    <p>
+                        Los siguientes canales en mi opinión son los mejores para aprender cómo hacer y mantener una huerta urbana. Algunos son de países que del hemisferio norte como España y del hemisferio sur como Argentina, así que tienen estaciones y algunas son diferentes, pero nada del otro mundo, creo que con un poco de sentido común todo se entiende.
                     </p>
 
                     <ul>                        
